--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Slide 2 -->
     <section class="slide" data-index="2" aria-hidden="true">
       <h1 class="title">Kỹ năng mềm là gì?</h1>
-      <img class="illustration" src="https://images.pexels.com/photos/415078/pexels-photo-415078.jpeg?_gl=1*1ax707q*_ga*NzM4MTYzMjIzLjE3NDg0ODI4ODA.*_ga_8JE65Q40S6*czE3NjE1NzYyNDAkbzIkZzEkdDE3NjE1NzYyNTQkajQ2JGwwJGgw" alt="soft skills concept" />
+      <img class="illustration" src="https://images.unsplash.com/photo-1521790366321-0f30b7ddf3f6?q=80&w=1400&auto=format&fit=crop&ixlib=rb-4.0.3&s=3f7b5b7c1f1f7e2a6a4cb2c4f5b6c7d8" alt="soft skills concept" />
       <div class="content">
         <p>Kỹ năng mềm là tập hợp các khả năng không chỉ dựa trên kiến thức lý thuyết mà hình thành qua trải nghiệm: cách giao tiếp rõ ràng, khả năng lắng nghe, trình bày ý tưởng, xử lý xung đột, tư duy phản biện và quản trị cảm xúc. Chúng quyết định cách chúng ta tham gia tương tác với người khác và giải quyết tình huống đời thường. Một kỹ năng mềm tốt giúp bạn tạo ấn tượng tích cực, xây dựng niềm tin và làm việc hiệu quả trong nhóm.</p>
       </div>
